[package]
name = "iqos"
version = "1.0.0"
edition = "2024"
authors = ["VVX Club", "VVX Supp"]
description = "A Rust crate for controlling IQOS devices over BLE and USB"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/V-VX/iqos"
homepage = "https://github.com/V-VX/iqos"
documentation = "https://docs.rs/iqos"
keywords = ["iqos", "ble", "usb", "vape", "philipmorris"]
categories = ["hardware-support", "asynchronous"]
rust-version = "1.92"
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**",
]

[lib]
name = "iqos"
path = "src/lib.rs"

[features]
default = []
btleplug-support = ["dep:btleplug", "dep:tokio"]
usb-support = []

[dependencies]
async-trait = "0.1"
btleplug = { version = "0.11.8", optional = true }
futures = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"], optional = true }
uuid = { version = "1", features = ["macro-diagnostics"] }
